--- a/src/main/resources/static/cadastro.html
+++ b/src/main/resources/static/cadastro.html
@@ -5,9 +5,9 @@
 </head>
 <body>
 <h2>Cadastro de Usuário</h2>
-<form method="post" action="/cadastro">
-    <label>Email: <input type="text" name="email" /></label><br />
-    <label>Senha: <input type="password" name="senha" /></label><br />
+<form action="/cadastrar" method="POST">
+    <input type="email" name="email" />
+    <input type="password" name="password" />
     <button type="submit">Cadastrar</button>
 </form>
 </body>
