--- a/src/main/resources/static/cadastro.html
+++ b/src/main/resources/static/cadastro.html
@@ -6,8 +6,8 @@
 <body>
 <h2>Cadastro de Usuário</h2>
 <form action="/cadastrar" method="POST">
-    <input type="email" name="email" />
-    <input type="password" name="password" />
+    <input type="email" name="email" placeholder="E-mail" required/>
+    <input type="password" name="password" placeholder="Senha" required/>
     <button type="submit">Cadastrar</button>
 </form>
 </body>
